[package]
name = "mrss"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
feed-rs = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14.0"
tokio = { version = "1", features = ["full"] }
open = "5.3.2"
directories = "6.0.0"
toml = "0.9.5"
sha1 = "0.10"
log = "0.4"
